updates
- passing lang as param to generate prompts
- add schema sctrict as responseFormat "mistral"
